# zero2prod

./: Cargo.toml
migrations/: 20250712204556_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscription.rs
tests/: health_check.rs
