[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.11.0"
config = "0.15.13"
serde = {version = "1.0.219", features = ["derive"]}
sqlx = {version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
tokio = {version = "1.46.1", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.12.22"
